--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@ body,
 :root{
     height: 100%;
 }
-
+/* 
 [data-theme="light"] {
     font-family: 'Nunito', sans-serif;
     background-color: #f7fafc;
@@ -17,4 +17,4 @@ body,
 [data-theme="dark"] {
     background-color: #1a202c;
     color: #cbd5e0;
-}
+} */
